--- a/ltam/modules/broker-webservices/src/main/resources/log4j.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.bslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bslogfile.File=/data/log/broker-webservices4j.log
+log4j.appender.bslogfile.File=${catalina.base}/logs/broker-webservices4j.log
 log4j.appender.bslogfile.Append = true
 # Keep three backup files.
 log4j.appender.bslogfile.MaxBackupIndex=3
