Introduces new Return Type Class WSCallResult and make changes in Mailing address API input parameters

--- a/ltam/modules/broker-webservices/src/main/resources/systemParameters.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/systemParameters.properties
@@ -1,3 +1,6 @@
+webServiceAPI=GEMINI
+# webServiceAPI GEMINI, TD
+
 geminiEndPointUrl=http://testpawebservices.geminifund.com
 tdEndPointUrl=
 
@@ -5,7 +8,8 @@ tdEndPointUrl=
 
 getUserAccDetailsByAccNumber=select * from ltam_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID and lai.clientAccountID=?
 getPendingUserAccDetails=select * from ltam_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID
-updatePendingUserAccDetails=update user_logon_webservice set status=?,remarks=?,lastupdated=? where clientAccountID=?
+updatePendingUserAccDetailsOnSuccess=update user_logon_webservice set pwd=?, status=?,remarks=?,lastupdated=? where clientAccountID=?
+updatePendingUserAccDetailsOnFailure=update user_logon_webservice set status=?,remarks=?,lastupdated=? where clientAccountID=?
 updateUserEmail=update ltam_acct_info set email=?, lastupdated=? where clientAccountID=?
 getAccountExtInfo=select * from ltam_acct_info_ext where  clientAccountID=?
 
