--- a/ltam/modules/broker-webservices/src/main/resources/log4j.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=error, stdout, bslogfile
+log4j.rootLogger=info, stdout, bslogfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
