Renamed table name, made changes accordingly in application

--- a/ltam/modules/broker-webservices/src/main/resources/systemParameters.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/systemParameters.properties
@@ -6,12 +6,12 @@ tdEndPointUrl=
 
 #SQL
 
-getUserAccDetailsByAccNumber=select * from ltam_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID and lai.clientAccountID=?
-getPendingUserAccDetails=select * from ltam_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID
+getUserAccDetailsByAccNumber=select * from ext_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID and lai.clientAccountID=?
+getPendingUserAccDetails=select * from ext_acct_info lai , user_logon_webservice ulw where /*ulw.status='P' and*/ ulw.clientAccountID=lai.clientAccountID
 updatePendingUserAccDetailsOnSuccess=update user_logon_webservice set pwd=?, status=?,remarks=?,lastupdated=? where clientAccountID=?
 updatePendingUserAccDetailsOnFailure=update user_logon_webservice set status=?,remarks=?,lastupdated=? where clientAccountID=?
-updateUserEmail=update ltam_acct_info set email=?, lastupdated=? where clientAccountID=?
-getAccountExtInfo=select * from ltam_acct_info_ext where  clientAccountID=?
+updateUserEmail=update ext_acct_info set email=?, lastupdated=? where clientAccountID=?
+getAccountExtInfo=select * from ext_acct_info_extension where  clientAccountID=?
 
 
 userDetailsSelectSql=
