--- a/ltam/modules/web/pom.xml
+++ b/ltam/modules/web/pom.xml
@@ -74,6 +74,14 @@
          <artifactId>ltammodel</artifactId>
          <version>1.0-SNAPSHOT</version>
       </dependency>
+<!--
+      <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>broker-webservices</artifactId>
+         <version>1.0-SNAPSHOT</version>
+      </dependency>
+-->
+
 
       <dependency>
          <groupId>commons-beanutils</groupId>
