--- a/ltam/modules/web/pom.xml
+++ b/ltam/modules/web/pom.xml
@@ -365,7 +365,7 @@
                      <artifactId>bctsp-jdk14</artifactId>
                  </exclusion>
              </exclusions>
-         </dependency>
+         </dependency><dependency><groupId>com.invessence</groupId><artifactId>broker-webservices</artifactId><version>1.0-SNAPSHOT</version></dependency>
 
    </dependencies>
 </project>
