Fund Transfer API

--- a/ltam/modules/broker-webservices/src/main/resources/log4j.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/log4j.properties
@@ -2,14 +2,15 @@
 
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=info, stdout, bslogfile
+log4j.rootLogger=debug, stdout, bslogfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.bslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bslogfile.File=${catalina.base}/logs/broker-webservices4j.log
+log4j.appender.bslogfile.File=D:/Project/Abhang/logs/broker-webservices4j.log
+  #${catalina.base}/logs/broker-webservices4j.log
 log4j.appender.bslogfile.Append = true
 # Keep three backup files.
 log4j.appender.bslogfile.MaxBackupIndex=3
@@ -17,4 +18,5 @@ log4j.appender.bslogfile.MaxBackupIndex=3
 log4j.appender.bslogfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.bslogfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
-# log4j.logger.org.springframework=ERROR,stdout
+log4j.logger.org.springframework=ERROR,stdout
+log4j.logger.org.apache.axis=ERROR,stdout
