--- a/ltam/modules/broker-webservices/src/main/resources/log4j.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/log4j.properties
@@ -7,8 +7,10 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.bslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bslogfile.File=D:/Project/Abhang/logs/broker-webservices4j.log
+log4j.appender.bslogfile.File=${catalina.home}/logs/broker-webservices4j.log
+  #${catalina.home}/logs/broker-webservices4j.log
   #${catalina.base}/logs/broker-webservices4j.log
+  #D:/Project/Abhang/logs/broker-webservices4j.log
 log4j.appender.bslogfile.Append = true
 # Keep three backup files.
 log4j.appender.bslogfile.MaxBackupIndex=3
