LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
@@ -4,6 +4,7 @@ webServiceAPI=GEMINI
 geminiEndPointUrl=http://testpawebservices.geminifund.com
 tdEndPointUrl=
 
+fundGroupName=landenburgfund
 
 #API generic messages
 #In case of response not get from Services
