--- a/ltam/modules/broker-webservices/src/main/resources/log4j.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.bwslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bwslogfile.File=${catalina.base}/logs/broker-webservices4j.log
+log4j.appender.bwslogfile.File=D:/Project/Abhang/logs/broker-webservices4j.log
   #${catalina.home}/logs/broker-webservices4j.log
   #${catalina.base}/logs/broker-webservices4j.log
   #D:/Project/Abhang/logs/broker-webservices4j.log
