LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/parent/pom.xml
+++ b/ltam/modules/parent/pom.xml
@@ -955,9 +955,10 @@
             <mail.port>587</mail.port>
             <base.data.dir>/data</base.data.dir>
             <base.rbsa.dir>/data</base.rbsa.dir>
-            <base.clientdata.dir>/data/client</base.clientdata.dir>
+            <base.clientdata.dir>/inv/client</base.clientdata.dir>
             <base.advisor.dir>/data/advisor</base.advisor.dir>
-            <base.web.dir>/inv/www/invessence/ROOT</base.web.dir>
+            <catalina.base>/inv/www/</catalina.base>
+            <base.web.dir>/inv/www/symbil/ROOT</base.web.dir>
             <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
             <advisor.upload.localdir>${base.advisor.dir}/upload/</advisor.upload.localdir>
             <advisor.download.localdir>${base.advisor.dir}/download/</advisor.download.localdir>
