LTAM version 3,0 - Introducing Web-Service integration

--- a/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
@@ -1,10 +1,10 @@
 webServiceAPI=GEMINI
 # webServiceAPI GEMINI, TD
 
-geminiEndPointUrl=https://pawebservices.geminifund.com
+geminiEndPointUrl=http://testpawebservices.geminifund.com
 tdEndPointUrl=
 
-fundGroupName=ladenburgfund
+fundGroupName=landenburgfund
 
 #API generic messages
 #In case of response not get from Services
