--- a/invessence/modules/web/src/main/resources/company.properties
+++ b/invessence/modules/web/src/main/resources/company.properties
@@ -1,6 +1,6 @@
 company.name=Invessence.com
-website.url=${tomcat.url}
-secure.url=${ssl.url}
+website.url=http://invessence.com
+secure.url=https://www.invessence.com
 web.mode=${web.mode}
 
 # Invessence Logo.
