--- a/tcm/modules/web/src/main/webapp/WEB-INF/web.xml
+++ b/tcm/modules/web/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
     </context-param>
    <context-param>
            <param-name>primefaces.THEME</param-name>
-           <param-value>#{uiportal.theme}</param-value>
+           <param-value>#{uiLayout.theme}</param-value>
    </context-param>
     <!-- Welcome page -->
     <welcome-file-list>
