--- a/ltam/modules/download-services/pom.xml
+++ b/ltam/modules/download-services/pom.xml
@@ -25,6 +25,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		 </dependency>
+	    <dependency>
+		 	<groupId>com.invessence</groupId>
+		 	<artifactId>service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		 </dependency>
 		<dependency>
 		 	<groupId>com.invessence</groupId>
 		 	<artifactId>core</artifactId>
