LTAM version 3,0 - Introducing Web-Service integration Integrated service module

--- a/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
+++ b/ltam/modules/broker-webservices/src/main/resources/webServicesParameters.properties
@@ -1,5 +1,5 @@
 webServiceAPI=GEMINI
-# webServiceAPI GEMINI, TD
+# BROKER_WEBSERVICE_API GEMINI, TD
 
 geminiEndPointUrl=http://testpawebservices.geminifund.com
 tdEndPointUrl=
@@ -7,7 +7,7 @@ tdEndPointUrl=
 fundGroupName=landenburgfund
 
 #API generic messages
-#In case of response not get from Services
+#In case of response not get from SERVICES
 wsResIssueMsg=WebService response issue
 wsResIssueCode=501
 
