--- a/ltam/modules/broker-webservices/pom.xml
+++ b/ltam/modules/broker-webservices/pom.xml
@@ -21,6 +21,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		 </dependency>
+	   		 <dependency>
+		 	<groupId>com.invessence</groupId>
+		 	<artifactId>service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		 </dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
