--- a/tcm/modules/pom.xml
+++ b/tcm/modules/pom.xml
@@ -24,7 +24,7 @@
       <module>download-services</module>
       <module>aggregate-services</module>
       <module>web</module>
-      <module>trading_service</module>
+      <module>trading-services</module>
       <module>emailer</module>
       <module>reports</module>
       <module>price-processor</module>
