LTAM version 3,0 - Patch July 2, 2016

--- a/ltam/modules/web/src/main/resources/webmessages.properties
+++ b/ltam/modules/web/src/main/resources/webmessages.properties
@@ -20,13 +20,6 @@ mbal=Your account has been locked because of a maximum number of incorrect login
      An email is sent to you.  Please follow the instruction to reset the password. <br/><br/>
 
 
-
-
-
-
-
-
-
 # Email Communication
 #----------------  Text Version of Messages ---------------
 supportdesk.L1=support@symbil.com
@@ -48,11 +41,19 @@ txt.password.reset.email=\n \
   Thank you \n \
   Symbil.com\n
 
+text.advisor_activate.email= \
+   Welcome to Symbil.com! \n \
+ Your userid ({1}) is now registered and active. \n \
+ You may now access your account using above userid \n \
+ Please email us directly at support@symbil.com to resolve this issue. \n \
+ Thank you,\n \
+ Symbil.com\n
 
-txt.activate,email=Dear {0}, \n\n \
+
+txt.activate,email=\n\n \
    Welcome to Symbil.com! \n \
  Your userid ({1}) is now registered. \n \
- please visit us at  \n {2}/activate.xhtml?u={3}&r={4} \n \
+ please visit us at  \n {0}/activate.xhtml?u={1}&r={2} \n \
  You will be prompted to type your password.  Then you'll be able to logon. \n \
  If clicking on the link does not work, try copying and pasting it into your browser.\n \
  If you did not register for this service, please email us directly at support@symbil.com to resolve this issue. \n \
@@ -70,11 +71,18 @@ txt.accountlocked.email=\n\
   Thank you, \n \
   Symbil.com  \n
 
-txt.password.success=<h1>Your new password has been set!<h1>  \
-  <h4>Shall we start?<h4>
+txt.password.success=Your password is reset. \n \
+                       You may now access your account. \n \
+                       Please email us directly at support@symbil.com to resolve this issue. \n \
+                       Thank you,\n \
+                       Symbil.com\n
 
-txt.registered.success=You are now registered!<h1>  \
-<h4>Shall we start?<h4>
+
+txt.registered.success=Your password is reset. \n \
+                                              You may now access your account. \n \
+                                              Please email us directly at support@symbil.com to resolve this issue. \n \
+                                              Thank you,\n \
+                                              Symbil.com\n
 
 txt.userid.taken=This userid is already taken.   \
   Please choose another userid.
@@ -83,6 +91,8 @@ txt.userid.taken=This userid is already taken.   \
 #  HTML templates
 #Activate: 0-URL,1-uid,2-resetid
 html.activate.email=${email_templates_dir}activate.htm~{0}~{1}~{2}
+#Activate for Advisor
+html.advisor_activate.email=${email_templates_dir}advisor_activate.htm~{0}~{1}~{2}
 #Password: 0-URL,1-uid,2-resetid
 html.password.reset.email=${email_templates_dir}reset.htm~{0}~{1}~{2}
 #Accountlocked: 0-URL,1-uid,2-resetid
