--- a/ltam/modules/download-services/pom.xml
+++ b/ltam/modules/download-services/pom.xml
@@ -12,13 +12,14 @@
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
-    <artifactId>broker-services</artifactId>
-   <version>1.0-SNAPSHOT</version>
+    <artifactId>download-services</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
 <properties>
 		<org.springframework-version>3.2.0.RELEASE</org.springframework-version>
 	</properties>
-	<dependencies>
+	  <dependencies>
 		 <dependency>
 		 	<groupId>com.invessence</groupId>
 		 	<artifactId>emailer</artifactId>
@@ -70,18 +71,18 @@
 		</dependency>
 
 
-<dependency>
-	<groupId>com.jcraft</groupId>
-	<artifactId>jsch</artifactId>
-	<version>0.1.49</version>
-</dependency>
+       <dependency>
+          <groupId>com.jcraft</groupId>
+          <artifactId>jsch</artifactId>
+          <version>0.1.49</version>
+       </dependency>
 
 	    <dependency>
 		  <groupId>commons-logging</groupId>
 		  <artifactId>commons-logging</artifactId>
 		  <version>1.1.1</version>
-	  </dependency>
-				<dependency>
+	    </dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
@@ -95,60 +96,7 @@
         </dependency>
 
 	</dependencies>
-<!--<build>-->
-        <!--<defaultGoal>install</defaultGoal>-->
-        <!--<resources>-->
-            <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
-                <!--<filtering>true</filtering>-->
-            <!--</resource>-->
-        <!--</resources>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<version>2.3.2</version>-->
-                <!--<configuration>-->
-                    <!--<source>1.6</source>-->
-                    <!--<target>1.6</target>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-jar-plugin</artifactId>-->
-                <!--<version>2.3.1</version>-->
-                <!--<configuration>-->
-                    <!--<archive>-->
-                        <!--<manifest>-->
-                            <!--<addClasspath>true</addClasspath>-->
-                            <!--<mainClass>com.invessence.broker.Main</mainClass>-->
-                        <!--</manifest>-->
-                    <!--</archive>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-                <!--<artifactId>maven-assembly-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<descriptorRefs>-->
-                        <!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
-                    <!--</descriptorRefs>-->
-                    <!--<archive>-->
-                        <!--<manifest>-->
-                            <!--<mainClass>com.invessence.broker.Main</mainClass>-->
-                        <!--</manifest>-->
-                    <!--</archive>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>single</id>-->
-                        <!--<phase>package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>single</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
+
    <build>
 	  <defaultGoal>install</defaultGoal>
         <resources>
@@ -182,7 +130,7 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/broker-services</outputDirectory>
+							<outputDirectory>${project.build.directory}/download-services</outputDirectory>
 							<resources>
 								<resource>
 									<directory>resources</directory>
@@ -204,7 +152,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/broker-services/lib</outputDirectory>
+							<outputDirectory>${project.build.directory}/download-services/lib</outputDirectory>
 							<overWriteReleases>false</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
 							<overWriteIfNewer>true</overWriteIfNewer>
@@ -228,7 +176,7 @@
 					</archive>
 
 					<!--<finalName>broker-services/broker-services</finalName>-->
-				   <finalName>broker-services/${artifactId}-${version}</finalName>
+				   <finalName>download-services/${artifactId}-${version}</finalName>
 				</configuration>
 			</plugin>
 		</plugins>
