--- a/tcm/modules/web/src/main/resources/company.properties
+++ b/tcm/modules/web/src/main/resources/company.properties
@@ -16,7 +16,7 @@ ACCOUNTOPENING.URL.0=
 THEME.0=spark
 THEME.LIB.0=spark-layout
 TEMPLATE.DIR.0=/template/common/spark
-CUSTOM.DIR.0=
+CONSUMER.DIR.0=invessence
 CSS.DIR.0=inv
 CUSTOM.CSS.0=css/inv.css
 
